<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".MainActivity">



        <TextView
            android:id="@+id/bienvenue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/google_sans_regular"
            android:gravity="center_horizontal"
            android:text="@string/bienvenue"
            android:textColor="@color/grey"
            android:textSize="40sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/message_connexion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/google_sans_regular"
            android:gravity="center_horizontal"
            android:text="@string/veuillez_vous_connecter_ou_n_cr_er_un_nouveau_compte_n_pour_utiliser_l_application"
            android:textColor="@color/grey"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bienvenue" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_margin="15dp"
            android:gravity="center_horizontal"
            android:inputType="textEmailAddress"
            android:autofillHints="E-mail"
            android:hint="E-mail"
            android:textColorHint="@color/grey"
            android:textColor="@color/grey"
            android:textSize="20sp"
            android:fontFamily="@font/google_sans_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/message_connexion" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:inputType="textPassword"
            android:layout_margin="15dp"
            android:hint="@string/mot_de_passe"
            android:textColorHint="@color/grey"
            android:textColor="@color/grey"
            android:textSize="20sp"
            android:fontFamily="@font/google_sans_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email"/>

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:backgroundTint="@color/button"
            android:text="@string/se_connecter"
            android:textColor="@color/grey"
            android:fontFamily="@font/google_sans_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password"
            app:cardCornerRadius="30dp"
            app:cardElevation="15dp"/>

        <Button
            android:id="@+id/new_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:backgroundTint="@color/dark_grey"
            android:text="@string/cr_er_un_nouveau_compte"
            android:textColor="@color/grey"
            android:fontFamily="@font/google_sans_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login"
            app:cardCornerRadius="30dp"
            app:cardElevation="15dp"/>

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mot_de_passe_oubli"
            android:fontFamily="@font/google_sans_regular"
            android:gravity="center_horizontal"
            android:textSize="20sp"
            android:textColor="@color/grey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="10dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>