<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background">

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/back"
            android:id="@+id/back_button"
            android:background="@null"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/inscription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/google_sans_regular"
            android:gravity="center_horizontal"
            android:text="@string/inscription"
            android:textColor="@color/grey"
            android:textSize="40sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/message_connexion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/google_sans_regular"
            android:gravity="center_horizontal"
            android:text="@string/veuillez_saisir_ces_diff_rentes_informations_afin_que_vos_listes_soient_sauvegard_es"
            android:textColor="@color/grey"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inscription" />

        <EditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_margin="15dp"
            android:gravity="center_horizontal"
            android:inputType="textPersonName"
            android:autofillHints="name"
            android:hint="@string/nom_d_utilisateur"
            android:textColorHint="@color/grey"
            android:textColor="@color/grey"
            android:textSize="20sp"
            android:fontFamily="@font/google_sans_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/message_connexion" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:inputType="textEmailAddress"
            android:autofillHints="E-mail"
            android:hint="E-mail"
            android:textColorHint="@color/grey"
            android:textColor="@color/grey"
            android:layout_margin="15dp"
            android:textSize="20sp"
            android:fontFamily="@font/google_sans_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_name"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:inputType="textPassword"
            android:hint="@string/mot_de_passe"
            android:textColorHint="@color/grey"
            android:layout_margin="15dp"
            android:textColor="@color/grey"
            android:textSize="20sp"
            android:fontFamily="@font/google_sans_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email"/>

        <EditText
            android:id="@+id/password_verification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:inputType="textPassword"
            android:layout_margin="15dp"
            android:hint="@string/verification_de_mot_de_passe"
            android:textColorHint="@color/grey"
            android:textColor="@color/grey"
            android:textSize="20sp"
            android:fontFamily="@font/google_sans_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password"/>

        <Button
            android:id="@+id/new_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:backgroundTint="@color/dark_grey"
            android:text="@string/s_inscrire"
            android:fontFamily="@font/google_sans_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_verification"
            android:textColor="@color/grey"
            app:cardCornerRadius="30dp"
            app:cardElevation="15dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>