<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background">

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/back"
            android:id="@+id/back_button"
            android:background="@null"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/google_sans_regular"
            android:gravity="center_horizontal"
            android:text="@string/mot_de_passe_oubli"
            android:textColor="@color/grey"
            android:textSize="40sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/message_connexion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/google_sans_regular"
            android:gravity="center_horizontal"
            android:text="@string/veuillez_saisir_votre_email_afin_de_r_initialiser_votre_mot_de_passe"
            android:textColor="@color/grey"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="15dp"
            android:layout_marginTop="50dp"
            app:circularflow_viewCenter="@color/dark_grey"
            android:gravity="center_horizontal"
            android:inputType="textEmailAddress"
            android:hint="E-mail"
            android:textColorHint="@color/grey"
            android:autofillHints="E-mail"
            android:textColor="@color/grey"
            android:textSize="20sp"
            android:fontFamily="@font/google_sans_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/message_connexion" />

        <Button
            android:id="@+id/send_email_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:backgroundTint="@color/dark_grey"
            android:text="@string/renvoyer_mon_mot_de_passe"
            android:fontFamily="@font/google_sans_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email"
            app:cardCornerRadius="30dp"
            android:textColor="@color/grey"
            app:cardElevation="15dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>